# XMLGen

./: CMakeLists.txt  contacts.txt  contacts.xml  main.cpp  notes.txt
Utest1/: CMakeLists.txt  main.cpp
dependencies/: CMakeLists.txt
project_lib/: CMakeLists.txt  CsvForm.cpp  CsvForm.hpp  CsvLine.cpp  CsvLine.hpp  CsvLoader.cpp  CsvLoader.hpp  XMLform.cpp  XMLform.hpp  XMLline.cpp  XMLline.hpp  contacts.xsd  dataSearch.cpp  dataSearch.hpp  notes.txt
